--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body{
 a{
     text-decoration: none;
 }
-/* header */
+/* header ..........................................................*/
 .header{
     width: 100%;
     height: 50px;
